--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,12 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="prompt_first_name">First Name</string>
+    <string name="prompt_last_name">Full Name</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_phone">Phone</string>
+    <string name="prompt_credit_card">CredidCart</string>
+    <string name="channel_name">Car Parking</string>
+    <string name="channel_id">car_parking</string>
+    <string name="something_went_wrong">Something went wrong. /n Check your network connection.</string>
 </resources>
